--- a/index.html
+++ b/index.html
@@ -37,42 +37,38 @@
 	</div>
 
 
-	<div id="wrapperbanner"><img id="banner" src="images/subspace.png" /></div>
+	<div id="wrapperbanner"><img class="banner" src="images/subspacetemp.png" /></div>
 	<div class="main">
-		<div class="w3">
-			<div class="signin-form profile">
-				<h3>Login</h3>
-				
-				<div class="login-form">
-					<form id="login_form" action="#" method="post">
-						<input type="text" name="name" placeholder="Username" required="">
-						<input type="password" name="password" placeholder="Password" required="">
-						<div class="tp">
-							<input type="submit" value="LOGIN NOW">
-						</div>
-					</form>
-				</div>
-				<div class="header-social wthree">
-							<div class="clear"></div>
-						</div>
-				<p><a href="#"> Don't have an account?</a></p>
+		<div class="signin-form profile login">
+			<h3>Login</h3>
+			
+			<div class="login-form">
+				<form id="login_form" action="#" method="post">
+					<input type="text" name="name" placeholder="Username" required="">
+					<input type="password" name="password" placeholder="Password" required="">
+					<div class="tp">
+						<input type="submit" value="LOGIN NOW">
+					</div>
+				</form>
 			</div>
+			<div class="header-social wthree">
+						<div class="clear"></div>
+					</div>
+			<p><a href="#"> Don't have an account?</a></p>
 		</div>
-		<div class="agile">
-			<div class="signin-form profile">
-				<h3>Register</h3>
-				
-				<div class="login-form">
-					<form id="register_form" action="#" method="post">
-						<input type="text" name="email" placeholder="E-mail" required="">
-						<input type="text" name="name" placeholder="Username" required="">
-						<input type="password" name="password" placeholder="Password" required="">
-						<input type="password" name="wpassword" placeholder="Confirm Password" required="">
-						<input type="submit" value="REGISTER">
-					</form>
-				</div>
-				<p><a href="#"> By clicking register, I agree to your terms</a></p>
+		<div class="signin-form profile register">
+			<h3>Register</h3>
+			
+			<div class="login-form">
+				<form id="register_form" action="#" method="post">
+					<input type="text" name="email" placeholder="E-mail" required="">
+					<input type="text" name="name" placeholder="Username" required="">
+					<input type="password" name="password" placeholder="Password" required="">
+					<input type="password" name="wpassword" placeholder="Confirm Password" required="">
+					<input type="submit" value="REGISTER">
+				</form>
 			</div>
+			<p><a href="#"> By clicking register, I agree to your terms</a></p>
 		</div>
 		<div class="clear"></div>
 	</div>				
