--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="css/subspacevfx.css" rel="stylesheet" type="text/css" />
 	<link href='//fonts.googleapis.com/css?family=Jura:400,300,500,600' rel='stylesheet' type='text/css'>
 	<script src="js/jquery-1.12.0.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="js/jquery.form.js"></script>
 	<script src="js/main.js"></script>
+	<script src="js/regl.min.js"></script>
 </head>
 <body>
+	<canvas id="webgl"></canvas>
 
 	<div id="alertbox">
 
@@ -71,6 +74,81 @@
 			<p><a href="#"> By clicking register, I agree to your terms</a></p>
 		</div>
 		<div class="clear"></div>
-	</div>				
+	</div>
+	<script type="x-shader/x-fragment" id="fragmentShader">
+		#define TWO_PI 6.2831853072
+		#define PI 3.14159265359
+		precision highp float;
+
+		uniform float globaltime;
+		uniform vec2 resolution;
+		uniform float aspect;
+		uniform float scroll;
+		uniform float velocity;
+		uniform sampler2D texture;
+
+		const float timescale = 0.15;
+		const float displace = 0.03;
+		const float gridSize = 20.0;
+		const int layers = 3;
+		const float detail = 2.0;
+		const float wave = 1.0;
+
+		vec2 rotate(vec2 v, float angle) {
+			float c = cos(angle);
+			float s = sin(angle);
+			return v * mat2(c, -s, s, c);
+		}
+
+		vec3 coordToHex(vec2 coord, float scale, float angle) {
+			vec2 c = rotate(coord, angle);
+			float q = ( 1./ 3. * sqrt(3.) * c.x - 1. / 3. * c.y) * scale;
+			float r = 2. / 3. * c.y * scale;
+			return vec3(q, r, -q - r);
+		}
+		vec3 hexToCell(vec3 hex, float m) {
+			return fract(hex / m) * 2. - 1.;
+		}
+		float absMax(vec3 v) {
+			return max(max(abs(v.x), abs(v.y)), abs(v.z));
+		}
+		float nsin(float value) {
+			return sin(value * TWO_PI) * 0.5 + 0.5;
+		}
+		float hexToFloat(vec3 hex, float amt) {
+			return mix(absMax(hex), 1.0 - length(hex) / sqrt(3.0), amt);
+		}
+
+		float calc(vec3 hex, float time, float len) {
+			float value = 0.0;
+			for(int i = 0; i < layers; i++) {
+				vec3 cell = hexToCell(hex, 1.0 + float(i));
+				value += nsin(hexToFloat( cell, nsin(len * wave + time + float(i) / float(layers))) * detail + nsin(time * 0.5));
+			}
+			return value / float(layers);
+		}
+
+		void main(void) {
+			vec2 tx = (gl_FragCoord.xy / resolution.xy - 0.5) * vec2(aspect, 1.) * 2.;
+			float time = globaltime * timescale;
+			vec2 center = vec2(sin(TWO_PI * time * 0.2), cos(TWO_PI * time * 0.2)) * nsin(time * 0.3) * 0.5;
+			float invScroll = 1. - scroll;
+			float rgb[3];
+			float len = 1. - length(tx) * 0.3;
+			float zoom = nsin(time * 0.1) + len * velocity * 2.;
+			float angle = TWO_PI * nsin(time * 0.05) + PI * len * scroll;
+			vec3 hex = coordToHex(tx, gridSize * zoom, angle);
+			for (int i = 0; i < 3; i++) {
+				float time2 = time + float(i) * displace * invScroll;
+				rgb[i] = pow(calc(hex, time2, len), 3.)*(0.2 + 0.8 * sin(PI * len * 0.5));
+			}
+			vec4 imgColor = texture2D(texture, rotate((tx + center) * vec2(1.0, -1.0) * zoom,detail*TWO_PI * nsin(len + time * 0.05) * scroll + time) + 0.5);
+			gl_FragColor = vec4( imgColor.x - rgb[0] * (1. - scroll * 0.2) , imgColor.y - rgb[1] * invScroll , imgColor.z - (rgb[2] + 0.2) * invScroll, 1.);
+			//gl_FragColor = imgColor;
+
+		}
+	</script>
+	<script src="js/subspacevfx.js"></script>	
+	
 </body>
 </html>
